<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alive Messages</string>
    <string name="desc">desc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- admob id -->
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string><!-- your admob id -->
    <string name="admob_intertestial_id">ca-app-pub-3940256099942544/1033173712</string><!-- your admob intertestal ad id -->

    <!-- true if want to use RTL else false -->
    <string name="isRTL">false</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Vishal+M+Parmar</string>


    <!-- Change this according to your language -->
    <string name="action_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_moreapp">Request Personal!</string>
    <string name="requesting">To create a new custom gif or wallpaper, please contact me and choose what gif you would like to personalize…</string>
    <string name="menu_rateapp">RateApp</string>
    <string name="menu_back">Back</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_zoom">Pinch Zoom</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_setaswallpaper">SetsWallPaper</string>
    <string name="menu_next">Next</string>
    <string name="img_no">No Favorite Found</string>
    <string name="setaswallpaper">Set As Wallpaper</string>
    <string name="close">Close</string>
    <string name="transition_string">hello</string>
    <string name="no_cat">No Categories Found</string>
    <string name="no_wall">No Wallpapers Found</string>
    <string name="no_gif">No GIFs found</string>
    <string name="no_latest">No Latest Items Found</string>
    <string name="removed_fav">Removed from Favorite</string>
    <string name="added_fav">Added to Favorite</string>
    <string name="loading">Loading..</string>
    <string name="first_load_internet">First Time Load Application from Internet</string>
    <string name="no_data_found">No data found from web</string>
    <string name="no_more_data">No more data</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="gifs">GIFs</string>
    <string name="connect_net_load_gif">Please connect to internet to load GIFs</string>
    <string name="latest">Wallpapers</string>
    <string name="category">Category</string>
    <string name="fav">Favourite</string>
    <string name="cannot_use_save">Cannot use save feature without requested permission</string>
    <string name="sure_quit">Are You Sure You Want To Quit?</string>
    <string name="yes">Yes</string>
    <string name="rateapp">Rate App</string>
    <string name="setting_wallpaper">Setting Wallpaper..</string>
    <string name="wallpaper_set">Wallpaper set</string>
    <string name="select">Select</string>
    <string name="download_image">Downloading Image..</string>
    <string name="image_save_success">Image Saved Successfully in HD Wallpaper</string>
    <string name="please_wait">Please wait..</string>
    <string name="share_image">Share Image</string>
    <string name="download_gif">Downloading GIF..</string>
    <string name="gif_save_success">GIF Saved Successfully in HD Wallpaper</string>
    <string name="amazing_wall">Amazing Wallpapers in your way</string>
    <string name="categories">Categories</string>
    <string name="privacy">Privacy Policy</string>
    <string name="choose">choose:</string>
    <string name="wallpaper">wallpaper</string>
    <string name="gif">GIF</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="the_request_and_details">Text on screen</string>
    <string name="email_address">Email Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">temp</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_temp2">temp2</string>
    <string name="or">or</string>
    <string name="chosen">You\'ve chosen GIF! Great!</string>

</resources>