<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_nav"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--card_view:cardCornerRadius="3dp"-->
                    <!--card_view:cardElevation="4dp"-->
                    <!--card_view:cardUseCompatPadding="true"-->
                    <!--card_view:cardPreventCornerOverlap="true"-->
                    <!--android:foreground="?android:attr/selectableItemBackground">-->

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icon_nav"/>

                <!--</android.support.v7.widget.CardView>-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:text="@string/amazing_wall"
                    android:textSize="14sp"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#50ffffff"/>

            <LinearLayout
                android:id="@+id/ll_latest"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_nav_text_white">

                <ImageView
                    android:id="@+id/imageView_latest"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/latest"/>

                <TextView
                    android:id="@+id/textView_latest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/latest"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cat"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_cat"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/cat"/>

                <TextView
                    android:id="@+id/textView_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/categories"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_fav"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_fav"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/fav"/>

                <TextView
                    android:id="@+id/textView_fav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/fav"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_gif"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView_gif"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/gif"/>

                <TextView
                    android:id="@+id/textView_gif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/gifs"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/rate"/>

                <TextView
                    android:id="@+id/textView_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/rateapp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/more"/>

                <TextView
                    android:id="@+id/textView_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_moreapp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/cat"/>

                <TextView
                    android:id="@+id/textView_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/menu_about"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/setting"/>

                <TextView
                    android:id="@+id/textView_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/action_settings"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/privacy"/>

                <TextView
                    android:id="@+id/textView_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/privacy"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#50ffffff"/>

    <TextView
        android:id="@+id/textView_developedby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="17sp"
        android:textColor="@color/white"/>

</LinearLayout>